[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/particles/poison_smoke_particle.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/EnemyEldritchHex.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/enemy_lightning_spritesheet.png" type="Texture" id=3]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 36, 5, 1 )
flag_disable_z = true
gravity = Vector3( 0, -65, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.2

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "strike",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 100 )

[node name="EnemyEldritchHex" type="Node2D" groups=["Enemy", "Hostile", "LightEnemy", "Projectile"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="SmokeParticles2D" type="Particles2D" parent="."]
position = Vector2( 0, 66 )
scale = Vector2( 2.5, 2.5 )
lifetime = 0.5
explosiveness = 0.25
process_material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="LightningAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -45 )
scale = Vector2( 8, 10 )
frames = SubResource( 11 )
animation = "strike"
frame = 2

[node name="DamageTickTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["Enemy", "Hostile", "Projectile"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -43 )
shape = SubResource( 1 )
disabled = true

[connection signal="timeout" from="DamageTickTimer" to="." method="_on_DamageTickTimer_timeout"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
